# pytype

./: .gitignore  LICENSE  README.md  pyproject.toml  pytype.toml
.github/: FUNDING.yml
pytype/: __init__.py  analyzer.py  checker.py  cli.py  config.py  infer.py  reporter.py
tests/: __init__.py  test_checker.py  test_cli.py  test_infer.py
